k8s/10110110.xyz/web/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iofq-web
  labels:
    app: iofq-web
  namespace: iofq-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iofq-web
  template:
    metadata:
      labels:
        app: iofq-web
    spec:
      containers:
      - name: ip
        image: ghcr.io/iofq/iofq.net:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
