k8s/10110110.xyz/web/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: iofq-web-service
  namespace: iofq-web
spec:
  ports:
  - name: iofq-web-http
    port: 80
    targetPort: 80
  selector:
    app: iofq-web
