k8s/10110110.xyz/web/web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iofq-web-ingress
  namespace: iofq-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - 10110110.xyz
    secretName: iofq-web-tls
  rules:
    - host: 10110110.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iofq-web-service
                port:
                  number: 80
